Adicionando retorno de data de cultos em JSON

--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
 
       var s = new Sorei();
 
-      var dates = s.calc_shinrei()
+      var dates = s.get_dates()
 
-      console.log( dates )
+      console.log( dates.shinrei )
 
-      return dates
+      return dates.shinrei
 
 		}
 
