Separando arquivos de plugins e métodos do calendário

--- a/index.html
+++ b/index.html
@@ -27,7 +27,13 @@
   <!-- Source Sorei.js -->
   <script src="js/sorei.js" type="text/javascript" charset="utf-8"></script>
 
-  <!-- Source CalendarJS - Contains Tipsy jQuery Plugin - Delete as needed -->
+  <!-- Source Tipsy jQuery Plugin -->
+  <script src="js/vendor/jquery.tipsy/jquery.tipsy.js" type="text/javascript" charset="utf-8"></script>
+
+  <!-- Source ScrollTo jQuery Plugin -->
+  <script src="js/vendor/jquery.scrollto/jquery.scrollto.js" type="text/javascript" charset="utf-8"></script>
+
+  <!-- Source CalendarJS -->
   <script src="js/vendor/jquery.calendar/jquery.calendar.js" type="text/javascript" charset="utf-8"></script>
 
 
