--- a/index.html
+++ b/index.html
@@ -41,10 +41,16 @@
 	<script>
 
 		$(document).ready(function() {
+
+      var s = new Sorei()
+
+      var dates = s.get_dates()
+
 			$("#main-container").calendar({
 				tipsy_gravity: 's', // How do you want to anchor the tipsy notification? (n / s / e / w)
 				click_callback: calendar_callback, // Callback to return the clicked date
-				dates_list_callback: dates_list_callback, // Callback that returns the list of dates
+				shinrei_dates: dates.shinrei, // Sets value of shinrei dates
+				nensai_dates: dates.nensai, // Sets value of nensai dates
 				scroll_to_date: false // Scroll to the current date?
 			});
 		});
@@ -58,19 +64,6 @@
 			// date.day = day; date.month = month; date.year = year;
 			alert("Open your Javascript console to see the returned result object.");
 			console.log(date);
-		}
-
-
-		var dates_list_callback = function(a) {
-
-      var s = new Sorei();
-
-      var dates = s.get_dates()
-
-      console.log( dates.shinrei )
-
-      return dates.shinrei
-
 		}
 
 	</script>
