--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 			$("#main-container").calendar({
 				tipsy_gravity: 's', // How do you want to anchor the tipsy notification? (n / s / e / w)
 				click_callback: calendar_callback, // Callback to return the clicked date
-				shinrei_dates: dates.shinrei, // Sets value of shinrei dates
-				nensai_dates: dates.nensai, // Sets value of nensai dates
+				shinrei_dates: dates, // Sets value of shinrei dates
+				nensai_dates: dates, // Sets value of nensai dates
 				scroll_to_date: false // Scroll to the current date?
 			});
 		});
