--- a/index.html
+++ b/index.html
@@ -48,9 +48,11 @@
 
                 var dt = $('.dt_falecimento').val()
 
-                // dt = dt.split('/')
-                //
-                // dt = dt[1] + '/' + dt[0] + '/' + dt[2]
+                dt = dt.split('-')
+
+                dt = dt[1] + '/' + dt[2] + '/' + dt[0]
+
+                console.log(dt);
 
                 var s = new Sorei( new Date( dt ) )
 
